--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
+asgiref==3.4.1
 click==8.0.1
-Django==2.0.2
+Django==3.2.9
 Flask==2.0.2
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
-Pillow==8.3.1
+Pillow==8.4.0
 psycopg2==2.8.6
 pytz==2021.1
+sqlparse==0.4.2
 Werkzeug==2.0.1
